# render_myproject

./: pyproject.toml  render.yaml  requirements.txt
myapp/: tasks.py  views.py
myapp/templates/myapp/: index.html
myproject/: __init__.py  settings.py  urls.py
